--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -11,6 +11,9 @@ jobs:
   generate:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout repo
+        uses: actions/checkout@v3
+
       - name: Create output directory
         run: mkdir -p output
 
