--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -2,28 +2,29 @@ name: Update Contribution Snake
 
 on:
   schedule:
-    - cron: "0 0 * * *" # كل يوم الساعة 12 منتصف الليل
+    - cron: "0 0 * * *" # يوميًا الساعة 12 صباحًا
   workflow_dispatch:
 
 jobs:
   update-snake:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
+      - name: Checkout repo
         uses: actions/checkout@v3
 
-      - name: Create output folder if not exists
-        run: mkdir -p ./output
-
-      - name: Generate the snake animation
+      - name: Create output folder
         run: |
-          curl -o github-contribution-grid-snake.svg https://raw.githubusercontent.com/salesp07/salesp07/output/github-contribution-grid-snake.svg
-          mv github-contribution-grid-snake.svg ./output/github-contribution-grid-snake.svg
+          mkdir -p output
+          echo "output folder created"
 
-      - name: Commit and push if there are changes
+      - name: Download snake svg
         run: |
-          git config --global user.name 'GitHub Action'
-          git config --global user.email 'action@github.com'
-          git add ./output/github-contribution-grid-snake.svg
-          git commit -m "🐍 Update contribution snake" || echo "No changes to commit"
+          curl -o output/github-contribution-grid-snake.svg https://raw.githubusercontent.com/salesp07/salesp07/output/github-contribution-grid-snake.svg
+
+      - name: Commit and push changes
+        run: |
+          git config --global user.name 'GitHub Actions'
+          git config --global user.email 'actions@github.com'
+          git add output/github-contribution-grid-snake.svg
+          git commit -m "🐍 Update snake animation" || echo "No changes"
           git push
