--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,26 +1,40 @@
-name: Update Contribution Snake
+name: Generate Snake
 
 on:
   schedule:
-    - cron: "0 0 * * *"  # This will run once a day at midnight (UTC)
+    - cron: "0 */12 * * *"  # كل 12 ساعة
+  workflow_dispatch:
   push:
     branches:
-      - main  # This will trigger on pushes to the main branch
+      - main
 
 jobs:
-  update-snake:
+  build:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
+      - name: Clone repo
+        uses: actions/checkout@v3
 
-    - name: Generate Contribution Snake
-      run: |
-        curl -o github-contribution-grid-snake.svg https://raw.githubusercontent.com/salesp07/salesp07/output/github-contribution-grid-snake.svg
-        mv github-contribution-grid-snake.svg ./output/github-contribution-grid-snake.svg
-    - name: Commit & Push the generated snake
-      uses: EndBug/add-and-commit@v7
-      with:
-        message: 'Updated the contribution snake'
-        add: 'output/github-contribution-grid-snake.svg'
+      - name: Generate the snake files in './dist/'
+        uses: Platane/snk@v3
+        id: snake-gif
+        with:
+          github_user_name: 'yossefmahmoud1'  # هنا حطيت اسم المستخدم بتاعك
+          outputs: |
+            dist/github-contribution-grid-snake.svg
+            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
+            dist/github-contribution-grid-snake.gif?color_snake=orange&color_dots=#bfd6f6,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Show build status
+        run: git status
+
+      - name: Push new files to the output branch
+        uses: crazy-max/ghaction-github-pages@v3.1.0
+        with:
+          target_branch: output
+          build_dir: dist
+          commit_message: Update snake animations
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
