--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,5 +36,5 @@ jobs:
           target_branch: output
           build_dir: dist
           commit_message: Update snake animations
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      env:
+  GITHUB_TOKEN: ${{ secrets.BAT_PAT_TOKEN }}
